# breakdown-services

./: .gitignore  Makefile  README.md  docker-compose.yml  package.json  typeshare.toml
.github/workflows/: branch_ci.yml  staging_app_service_cd.yaml
app-service/: Cargo.toml  Dockerfile  Dockerfile.local  Dockerfile.prod  package.json  tsconfig.json
app-service-rs/: Cargo.toml  Dockerfile.local
app-service-rs/migrations/: 10_cosponsors.down.sql  13_bill_full_texts.down.sql  14_cleanup.up.sql  7_users_issues.down.sql  7_users_issues.up.sql  (+1 more)
app-service-v2/: Cargo.toml  README.md
app-service-v2/core/: Cargo.toml
app-service-v2/core/src/: lib.rs
architecture/: .$Architecture.drawio.bkp  Architecture.drawio  Brainstorming.drawio
diagrams/: .$Architecture.drawio.bkp  Architecture.drawio
job-service/: Dockerfile.local  Dockerfile.test  package.json  tsconfig.json
marketing/: package-lock.json  tsconfig.json
migrations/: 12_images.down.sql  15_user_votes_timestamps.down.sql  17_users_reps.down.sql  17_users_reps.up.sql  4_bills.down.sql  5_issues.down.sql
mobile/: App.tsx  app.json  package-lock.json  package.json  tsconfig.json
mobile-old/: app.json  babel.config.js
mobile-v2/: app.json  package-lock.json  package.json
shared/: package.json  tsconfig.json
sync-service/: Cargo.toml  Dockerfile.local
sync-service/.cargo/: config.toml
sync-service/configuration/: base.yaml
sync-service/migrations/: 2_bills.up.sql  2_states.down.sql  3_issues.up.sql  4_states.down.sql  5_reps.up.sql
sync-service/src/: config.rs  configuration.rs  main.rs  startup.rs  telemetry.rs
sync-service/src/api/: bills.rs  error.rs  mod.rs  reps.rs  scripts.rs  sync.rs
sync-service/src/idempotency/: mod.rs  persistence.rs
sync-service/src/services/: bills.rs  mod.rs  propublica.rs  reps.rs
sync-service/src/types/: mod.rs  propublica_api.rs
terraform/: .gitignore  NOTES.md  README.md
(+327 files in other folders)
