[package]
name = "sync-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.5", features = ["tower-log"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "any", "postgres" ] }
tower = "0.4"
tower-http = { version = "0.3", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
envconfig = "0.10"