[package]
name = "sync-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
axum = { version = "0.5", features = ["tower-log"] }
envconfig = "0.10"
hmac = "0.12.1"
log = "0.4.17"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "any", "postgres", "uuid", "time" ] }
thiserror = "1.0.37"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
serde_json = "1.0.85"
futures = "0.3.24"
chrono = "0.4.22"
uuid = "1.2.1"