[package]
name = "core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Workspace
entity = { path = "../entity" }
sea-orm = { version = "0.10.2", features = [ "debug-print", "runtime-async-std-native-tls", "sqlx-postgres" ] }

[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }
